borsh-derive/src/internals/serialize/structs/snapshots/bound_generics.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Key, V> borsh::ser::BorshSerialize for A<K, V>
where
    V: Value,
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <HashMap<K, V> as borsh::BorshSerialize>::serialize(&self.x, writer)?;
        <String as borsh::BorshSerialize>::serialize(&self.y, writer)?;
        ::core::result::Result::Ok(())
    }
}
