borsh-derive/src/internals/serialize/structs/snapshots/check_serialize_with_async_skip_conflict.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: err
---
Error(
    "`skip` cannot be used at the same time as `serialize_with`, `deserialize_with`, `serialize_with_async` or `deserialize_with_async`",
)
