borsh-derive/src/internals/serialize/structs/snapshots/check_serialize_with_attr-2.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Ord, V> borsh::ser::BorshSerializeAsync for A<K, V>
where
    K: borsh::ser::BorshSerializeAsync,
    V: borsh::ser::BorshSerializeAsync,
{
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <ThirdParty<K, V> as borsh::BorshSerializeAsync>::serialize(&self.x, writer)
            .await?;
        <u64 as borsh::BorshSerializeAsync>::serialize(&self.y, writer).await?;
        ::core::result::Result::Ok(())
    }
}
