borsh-derive/src/internals/serialize/structs/snapshots/check_serialize_with_skip_conflict.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: err
---
Error(
    "`borsh_skip` cannot be used at the same time as `serialize_with` or `deserialize_with`",
)
