borsh-derive/src/internals/serialize/structs/snapshots/generic_associated_type.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<T, V> borsh::ser::BorshSerialize for Parametrized<T, V>
where
    T: TraitName,
    T::Associated: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <T::Associated as borsh::BorshSerialize>::serialize(&self.field, writer)?;
        <V as borsh::BorshSerialize>::serialize(&self.another, writer)?;
        ::core::result::Result::Ok(())
    }
}
