borsh-derive/src/internals/serialize/structs/snapshots/generic_tuple_struct_borsh_skip1-2.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K, V, U> borsh::ser::BorshSerializeAsync for G<K, V, U>
where
    U: borsh::ser::BorshSerializeAsync,
{
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <U as borsh::BorshSerializeAsync>::serialize(&self.1, writer).await?;
        ::core::result::Result::Ok(())
    }
}
