borsh-derive/src/internals/serialize/structs/snapshots/generic_tuple_struct_borsh_skip1.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl<K, V, U> borsh::ser::BorshSerialize for G<K, V, U>
where
    U: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        borsh::BorshSerialize::serialize(&self.1, writer)?;
        Ok(())
    }
}
