borsh-derive/src/internals/serialize/structs/snapshots/generic_tuple_struct_borsh_skip2.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K, V, U> borsh::ser::BorshSerialize for G<K, V, U>
where
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <HashMap<K, V> as borsh::BorshSerialize>::serialize(&self.0, writer)?;
        ::core::result::Result::Ok(())
    }
}
